<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_menu_favor"
        android:orderInCategory="100"
        android:title="@string/action_menu_favor"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_menu_search"
        app:showAsAction="always"/>

    <!--<item-->
    <!--android:id="@+id/action_menu_settings"-->
    <!--android:orderInCategory="100"-->
    <!--android:title="@string/action_menu_settings"-->
    <!--app:showAsAction="never" />-->

    <item
        android:id="@+id/action_menu_exit"
        android:orderInCategory="100"
        android:title="@string/action_menu_exit"
        app:showAsAction="never"/>

</menu>
